turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:17: error: not enough arguments for method apply: (i: Int)Int in class Array.
Unspecified value parameter i.
  state= rule(state)(test)()
                          ^